# AI_solo_coder_task_A_129

./: .dockerignore  .env  README.md  docker-compose.yml  test_casting.json  test_sensor.json
backend/: Cargo.toml  Dockerfile
backend/config/: acoustics_params.json  materials.json
backend/src/: acoustic_analyzer.rs  acoustics.rs  alarm.rs  alarm_mqtt.rs  api.rs  casting_simulator.rs  clickhouse_client.rs  config.rs  dtu_receiver.rs  main.rs  metrics.rs  models.rs  mqtt_client.rs  simulation.rs
clickhouse/: init.sql  init_full.sql
frontend/: Dockerfile  index.html  nginx.conf
frontend/js/: acoustic_panel.js  bronze_drum_3d.js  main.js
mqtt/: mosquitto.conf
prometheus/: prometheus.yml
simulator/: Dockerfile  drum_simulator.py  requirements.txt  sensor_simulator.py  simulator_config.json
