[package]
name = "bronze-drum-system"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "bronze-drum-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clickhouse = { version = "0.11", features = ["default"] }
rumqttc = "0.24"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
nalgebra = "0.32"
approx = "0.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
futures = "0.3"
tokio-tungstenite = "0.21"
